resolve 2nd request
- solved: Please clean up commented codes in your code base. This makes your code untidy.
- solved: The value for min-width property of the media queries should be in range of 992px - 1100px. The 650px you've used is too small. Please fix it.
- solved:  The featured project image should take 60% of the page's width and is aligned to the left, the description should take the remaining 40% and is aligned to the right. Starting from screen size 950px, the project section of your portfolio is cut off at the two edges and a horizontal navigation bar automatically shows up. This implies that your elements have a combined width that extends beyond the viewport. This does not make the page look good. Please let's fix it.
 The contents of the featured project description should be aligned to the left.
 There's a See Project button that should take you to the Live Demo of the featured project or to the GitHub repository.
 When the project is hovered on with the mouse the description and dark opacity disappears and a See Project button appears to the bottom of the image and takes the whole image width. The mentioned button should take you to the Live Demo of the project or to the GitHub repository.
 The list of technologies in the Language, Frameworks and SKills section of the "About Me" section of your portfolio are wobbly and not well arranged. In the template, they are aligned to the left in a row under each heading. Please let's fix it.
 The bold text in beside the contact form should start on the same line with the form just as it is in the template.

--- a/style/dark-style.css
+++ b/style/dark-style.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   color: white;
+  transition: all 2s;
 }
 
 .bkg2 {
@@ -21,6 +22,7 @@ body {
   background-position: right bottom;
   background-repeat: no-repeat;
   padding: 24px;
+  transition: all 2s;
 }
 
 .dark header {
@@ -91,12 +93,6 @@ body {
 .sublist > li {
   margin-bottom: 10px;
 }
-
-/*
-.dark nav > ul > li {
-  width: 77px;
-}
-*/
 
 .dark hr {
   height: 1px;
@@ -208,6 +204,7 @@ body {
   line-height: 43px;
   text-align: center;
   list-style-image: none;
+  padding-left: 0;
 }
 
 .fa {
@@ -222,7 +219,7 @@ body {
   color: #ff6b00;
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 992px) {
   .dark-section {
     flex-direction: row-reverse;
     justify-content: flex-end;
@@ -254,13 +251,6 @@ body {
     background-size: 40%;
   }
 
-  .about-skills {
-    margin-top: 146px;
-    margin-left: 0;
-    display: flex;
-    justify-content: space-between;
-  }
-
   .menu-button {
     display: none;
   }
@@ -269,5 +259,9 @@ body {
     display: flex;
     justify-content: space-between;
     padding-right: 15px;
+  }
+
+  .sublist {
+    text-align: left;
   }
 }
