--- a/style/light-style.css
+++ b/style/light-style.css
@@ -47,7 +47,7 @@
 }
 
 .multi-post > .mpimage {
-  width: 300px;
+  width: 60%;
   height: auto;
   flex-grow: 1;
 }
@@ -55,7 +55,7 @@
 .multi-post > div {
   font-family: Inter, sans-serif;
   color: #091e42;
-  width: 300px;
+  width: 350px;
   height: auto;
   flex-grow: 1;
   margin-left: 5px;
@@ -69,7 +69,6 @@
   color: #091e42;
 }
 
-/* cards */
 .card-container {
   display: grid;
   justify-content: center;
@@ -110,6 +109,15 @@
   font-weight: normal;
   margin-left: 16px;
   margin-right: 16px;
+}
+
+.about-skills {
+  margin-top: 146px;
+  margin-left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .tags {
@@ -171,7 +179,6 @@ footer {
   width: 100%;
 }
 
-/* form styling */
 .portfolio-form {
   display: flex;
   flex-direction: column;
@@ -227,15 +234,14 @@ footer {
   margin-bottom: 80px;
 }
 
-/* mobile first aproach */
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 992px) {
   .card-container {
-    grid-template-columns: 320px 320px;
+    grid-template-columns: 320px 320px 320px;
   }
 
   .multi-post {
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
   }
 
   .dark-container {
@@ -270,41 +276,24 @@ footer {
 
   .footer-form {
     display: flex;
+    align-items: baseline;
   }
 
   #h1footer {
     width: 50%;
     padding-right: 20px;
     margin-top: 0;
-    text-align: center;
+    text-align: left;
   }
 
   .portfolio-form {
     width: 50%;
     align-items: flex-start;
   }
-}
 
-@media screen and (min-width: 950px) {
-  .card-container {
-    grid-template-columns: 320px 320px 320px;
-  }
-
-  .multi-post {
-    grid-column-start: 1;
-    grid-column-end: 4;
-  }
-
-  .dark-container {
-    flex-direction: column;
-    height: 400px;
-    justify-content: center;
-    margin-left: 0;
-    margin-right: 40px;
-  }
-
-  .fa-lg {
-    height: 36px;
-    width: 36px;
+  .about-skills {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
   }
 }
